# Controller

./: CMakeLists.txt  README.md
gen_scripts/: mimo_KalmanObserver.asv  mimo_KalmanObserver.m  print_matrix.m  siso_KalmanObserver.m  siso_current_controller_dummy.asv  siso_current_controller_dummy.m
inc/: controller.hpp  controller_Interface.hpp  controller_calculators.hpp
src/: controller.cpp
